package sizzle.types;

import "shared.proto";
import "ast.proto";

option optimize_for = SPEED;

message ChangedFile {
	enum FileKind {
		UNKNOWN = 1;
		BINARY = 2;
		TEXT = 3;
		XML = 4;
		SOURCE_JAVA_ERROR = 5;
		SOURCE_JAVA_JLS2 = 6;
		SOURCE_JAVA_JLS3 = 7;
		SOURCE_JAVA_JLS4 = 8;
	}
	required ChangeKind change = 1;
	required FileKind kind = 2;
	required string name = 3;
	repeated Namespace namespaces = 4;
//	repeated ChangedNamespace changed_namespaces = 5;
//	optional string content = 6;
}

message ChangedASTRoot {
	repeated ChangedNamespace namespaces = 1;
}

message ChangedNamespace {
	required ChangeKind change = 1;
	optional string name = 2;
	repeated ChangedModifier modifiers = 3;
	repeated ChangedDeclaration declarations = 4;
	repeated ChangedComment comments = 5;
}

message ChangedDeclaration {
	required ChangeKind change = 1;
	required TypeKind kind = 2;
	optional string name = 3;
	repeated ChangedModifier modifiers = 4;
	repeated ChangedType generic_parameters = 5;
	repeated ChangedType parents = 6;
	repeated ChangedMethod methods = 7;
	repeated ChangedVariable fields = 8;
	repeated ChangedDeclaration nested_declarations = 9;
	repeated ChangedComment comments = 10;
}

message ChangedType {
	required ChangeKind change = 1;
	optional TypeKind kind = 2;
	optional string name = 3;
	optional string id = 4;
}

message ChangedMethod {
	required ChangeKind change = 1;
	optional string name = 2;
	repeated ChangedModifier modifiers = 3;
	optional ChangedType return_type = 4;
	repeated ChangedType generic_parameters = 5;
	repeated ChangedVariable arguments = 6;
	repeated ChangedType exception_types = 7;
	repeated ChangedStatement statements = 8;
	repeated ChangedComment comments = 9;
}

message ChangedVariable {
	required ChangeKind change = 1;
	optional string name = 2;
	optional ChangedType variable_type = 3;
	repeated ChangedModifier modifiers = 4;
	optional ChangedExpression initializer = 5;
	repeated ChangedComment comments = 6;
}

message ChangedStatement {
	required ChangeKind change = 1;
	required Statement.StatementKind kind = 2;
	repeated ChangedComment comments = 3;
	repeated ChangedStatement statements = 4;
	repeated ChangedExpression initializations = 5;
	optional ChangedExpression condition = 6;
	repeated ChangedExpression updates = 7;
	optional ChangedVariable variable_declaration = 8;
	optional ChangedDeclaration type_declaration = 9;
	optional ChangedExpression expression = 10;
}

message ChangedExpression {
	required ChangeKind change = 1;
	required Expression.ExpressionKind kind = 2;
	repeated ChangedExpression expressions = 3;
	repeated ChangedVariable variable_decls = 4;
	optional ChangedType new_type = 5;
	repeated ChangedType generic_parameters = 6;
	optional bool is_postfix = 7;
	optional string literal = 8;
	optional string variable = 9;
	optional string method = 10;
	repeated ChangedExpression method_args = 11;
	optional ChangedDeclaration anon_declaration = 12;
}

message ChangedModifier {
	required ChangeKind change = 1;
	required Modifier.ModifierKind kind = 2;
	optional uint32 visibility = 3;
	optional string annotation_name = 4;
	repeated string annotation_members = 5;
	repeated ChangedExpression annotation_values = 6;
	optional string other = 7;
}

message ChangedComment {
	required ChangeKind change = 1;
	required Comment.CommentKind kind = 2;
	optional string value = 3;
	optional int32 start_line = 4;
}
